<resources>
    <!-- Basic Info -->
    <string name="app_name">artificial stupidity</string>
    <string name="app_version">0.1 (1)</string>

    <!-- Main Activity -->
    <string name="main_title">Rock\n Paper\n Scissors</string>
    <string name="start_game_button">Start</string>
    <string name="about_button">About</string>

    <!-- Main Game Activity -->
    <string name="rock">ROCK</string>
    <string name="paper">PAPER</string>
    <string name="scissors">SCISSORS</string>
    <string name="new_round">New Round</string>
    <string name="player_choose_rock">ROCK</string>
    <string name="player_choose_paper">PAPER</string>
    <string name="player_choose_scissors">SCISSORS</string>
    <string name="ai_state_desc">AI_STATE</string>
    <string name="player_state_desc">PLAYER_STATE</string>
    <string name="game_info_tv">
        Winning Count: %1$d&lt;br/>
        Draw Count: %2$d&lt;br/>
        Losing Count: %3$d&lt;br/>
        Winning Rate: %4$.1f%%
    </string>

    <!-- About Activity -->
    <string name="open_source_url">https://github.com/SkyerWalkery/RPS-for-Android</string>
    <string name="sdk_version_info">Min Api: %1$d, Target Api: %2$d</string>
    <string name="app_icon_desc">APP ICON</string>
    <string name="github_mark_desc">Open Source Address</string>
    <string name="app_slogan">Hello, World!😃</string>

    <!-- Other -->
    <string name="fail_to_find_browser">Oops, I can\'t find a browser!</string>


</resources>